# yhdm_downloader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
src/yhdm_downloader/: main.py
src/yhdm_downloader/templates/: example.py  www_dmyinghua_com.py  www_iyhdmm_com.py
src/yhdm_downloader/utils/: download_util.py  transcode_util.py
